--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,20 @@
 	    <artifactId>jena-fuseki-main</artifactId>
 	    <version>5.3.0</version>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
-	<dependency>
-	    <groupId>com.google.zxing</groupId>
-	    <artifactId>core</artifactId>
-	    <version>3.5.3</version>
-	</dependency>
+	 <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
