--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,17 @@
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-tdb -->
 	<dependency>
-	    <groupId>org.apache.jena</groupId>
-	    <artifactId>jena-tdb</artifactId>
-	    <version>4.10.0</version>
+		    <groupId>org.apache.jena</groupId>
+		    <artifactId>apache-jena-libs</artifactId>
+		    <type>pom</type>
+		    <version>5.4.0</version>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-fuseki-main -->
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-querybuilder -->
 	<dependency>
 	    <groupId>org.apache.jena</groupId>
-	    <artifactId>jena-fuseki-main</artifactId>
-	    <version>5.3.0</version>
+	    <artifactId>jena-querybuilder</artifactId>
+	    <version>5.4.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
 <dependency>
@@ -59,5 +61,24 @@
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
+    
+    <!-- Za eksport PDF-a -->
+   	<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itext7-core</artifactId>
+    <version>8.0.2</version>
+    <type>pom</type>
+</dependency>
+<!-- Za eksport XML-a -->
+<dependency>
+    <groupId>jakarta.xml.bind</groupId>
+    <artifactId>jakarta.xml.bind-api</artifactId>
+    <version>4.0.0</version>
+</dependency>
+<dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+    <version>4.0.2</version>
+</dependency>
   </dependencies>
 </project>
