--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,18 @@
 	    <artifactId>jena-querybuilder</artifactId>
 	    <version>5.4.0</version>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+	
 <dependency>
-    <groupId>io.jsonwebtoken</groupId>
-    <artifactId>jjwt</artifactId>
-    <version>0.12.6</version>
+    <groupId>org.apache.jena</groupId>
+    <artifactId>jena-arq</artifactId>
+    <version>4.9.0</version> <!-- Use latest 4.x -->
 </dependency>
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt</artifactId>
+	    <version>0.12.6</version>
+	</dependency>
 	 <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
